// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for hideLabel: false, state: { base: true, xs: false, s: true, m: false, l: true, xl: false } and none 1`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 1px solid #626669 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.6875rem 0.6875rem 2.25rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #000 !important;
}
::slotted(textarea:focus) {
  outline-color: #626669 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.counter {
  position: absolute;
  bottom: 0.375rem;
  right: 0.75rem;
  z-index: 1;
  color: #626669;
}
.counter:hover~::slotted(textarea:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}
@media(min-width:480px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 0 0 0.25rem;
  }
}

@media(min-width:760px) {
  .label__text {
    position: absolute;
    height: 1px;
    width: fit-content;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
    padding: 0 0 0.25rem;
  }
}

@media(min-width:1000px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 0 0 0.25rem;
  }
}

@media(min-width:1300px) {
  .label__text {
    position: absolute;
    height: 1px;
    width: fit-content;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
    padding: 0 0 0.25rem;
  }
}

@media(min-width:1760px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 0 0 0.25rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and error 1`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #e00000 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.625rem 0.625rem 2.25rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #a30000 !important;
}
::slotted(textarea:focus) {
  outline-color: #e00000 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])), .label__text:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #a30000 !important;
}
.counter {
  position: absolute;
  bottom: 0.375rem;
  right: 0.75rem;
  z-index: 1;
  color: #626669;
}
.counter:hover~::slotted(textarea:not(:disabled):not([readonly])), .counter:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #a30000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #e00000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and error 2`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #e00000 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.625rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #a30000 !important;
}
::slotted(textarea:focus) {
  outline-color: #e00000 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])), .label__text:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #a30000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #e00000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and none 1`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 1px solid #626669 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.6875rem 0.6875rem 2.25rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #000 !important;
}
::slotted(textarea:focus) {
  outline-color: #626669 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.counter {
  position: absolute;
  bottom: 0.375rem;
  right: 0.75rem;
  z-index: 1;
  color: #626669;
}
.counter:hover~::slotted(textarea:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and none 2`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 1px solid #626669 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.6875rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #000 !important;
}
::slotted(textarea:focus) {
  outline-color: #626669 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and success 1`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #018a16 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.625rem 0.625rem 2.25rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #014d0c !important;
}
::slotted(textarea:focus) {
  outline-color: #018a16 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])), .label__text:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #014d0c !important;
}
.counter {
  position: absolute;
  bottom: 0.375rem;
  right: 0.75rem;
  z-index: 1;
  color: #626669;
}
.counter:hover~::slotted(textarea:not(:disabled):not([readonly])), .counter:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #014d0c !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #018a16;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and success 2`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #018a16 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.625rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #014d0c !important;
}
::slotted(textarea:focus) {
  outline-color: #018a16 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])), .label__text:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #014d0c !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #018a16;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and error 1`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #e00000 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.625rem 0.625rem 2.25rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #a30000 !important;
}
::slotted(textarea:focus) {
  outline-color: #e00000 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])), .label__text:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #a30000 !important;
}
.counter {
  position: absolute;
  bottom: 0.375rem;
  right: 0.75rem;
  z-index: 1;
  color: #626669;
}
.counter:hover~::slotted(textarea:not(:disabled):not([readonly])), .counter:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #a30000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #e00000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and error 2`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #e00000 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.625rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #a30000 !important;
}
::slotted(textarea:focus) {
  outline-color: #e00000 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])), .label__text:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #a30000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #e00000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and none 1`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 1px solid #626669 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.6875rem 0.6875rem 2.25rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #000 !important;
}
::slotted(textarea:focus) {
  outline-color: #626669 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.counter {
  position: absolute;
  bottom: 0.375rem;
  right: 0.75rem;
  z-index: 1;
  color: #626669;
}
.counter:hover~::slotted(textarea:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and none 2`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 1px solid #626669 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.6875rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #000 !important;
}
::slotted(textarea:focus) {
  outline-color: #626669 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])) {
  border-color: #000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and success 1`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #018a16 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.625rem 0.625rem 2.25rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #014d0c !important;
}
::slotted(textarea:focus) {
  outline-color: #018a16 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])), .label__text:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #014d0c !important;
}
.counter {
  position: absolute;
  bottom: 0.375rem;
  right: 0.75rem;
  z-index: 1;
  color: #626669;
}
.counter:hover~::slotted(textarea:not(:disabled):not([readonly])), .counter:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #014d0c !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #018a16;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and success 2`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #018a16 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.625rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #014d0c !important;
}
::slotted(textarea:focus) {
  outline-color: #018a16 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #626669;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])), .label__text:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #014d0c !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #018a16;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: true and error 1`] = `
":host {
  display: block;
}
::slotted(textarea) {
  display: block !important;
  position: relative !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  width: 100% !important;
  margin: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #e00000 !important;
  border-radius: 0 !important;
  background-color: #fff !important;
  opacity: 1 !important;
  font: normal normal 400 1rem/1.5 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  -webkit-text-size-adjust: none !important;
  text-size-adjust: none !important;
  text-indent: 0 !important;
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  padding: 0.625rem !important;
  resize: vertical !important;
  min-height: 12rem;
}
::slotted(textarea:hover) {
  border-color: #a30000 !important;
}
::slotted(textarea:focus) {
  outline-color: #e00000 !important;
}
::slotted(textarea:disabled) {
  cursor: not-allowed !important;
  color: #96989a !important;
  border-color: #96989a !important;
  -webkit-text-fill-color: #96989a !important;
}
::slotted(textarea[readonly]) {
  border-color: #ebebeb !important;
  background-color: #ebebeb !important;
}
::slotted(textarea[readonly]:focus) {
  outline-color: transparent !important;
}
::slotted(textarea[readonly]:not(:disabled)) {
  color: #626669 !important;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 0.25rem;
  display: block;
  color: #96989a;
  transition: color var(--p-transition-duration, .24s) ease;
}
.label__text+.label__text--description {
  margin-top: -0.25rem;
  padding-bottom: 0.5rem;
}
.label__text--description {
  color: #96989a;
}
.label__text:hover~::slotted(textarea:not(:disabled):not([readonly])), .label__text:hover ::slotted(textarea:hover:not(:disabled):not([readonly])) {
  border-color: #a30000 !important;
}
.required {
  user-select: none;
  color: #e00000;
}
.message {
  display: flex;
  margin-top: 0.25rem;
  color: #e00000;
  transition: color var(--p-transition-duration, .24s) ease;
}
.message__icon {
  margin-right: 0.25rem;
}"
`;

exports[`getSlottedCss() should return correct css 1`] = `
"p-textarea-wrapper a {
  color: inherit !important;
  text-decoration: underline !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
}
p-textarea-wrapper[theme=\\"dark\\"] a:hover {
  color: #ff0223 !important;
}
p-textarea-wrapper b, p-textarea-wrapper strong {
  font-weight: 700 !important;
}
p-textarea-wrapper em, p-textarea-wrapper i {
  font-style: normal !important;
}
p-textarea-wrapper a:hover {
  color: #d5001c !important;
}
p-textarea-wrapper a::-moz-focus-inner {
  border: 0 !important;
}
p-textarea-wrapper a:focus {
  outline-color: currentColor !important;
}
p-textarea-wrapper a:focus:not(:focus-visible) {
  outline-color: transparent !important;
}"
`;

exports[`getSlottedCss() should return correct css with prefix 1`] = `
"prefixed-p-textarea-wrapper a {
  color: inherit !important;
  text-decoration: underline !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
}
prefixed-p-textarea-wrapper[theme=\\"dark\\"] a:hover {
  color: #ff0223 !important;
}
prefixed-p-textarea-wrapper b, prefixed-p-textarea-wrapper strong {
  font-weight: 700 !important;
}
prefixed-p-textarea-wrapper em, prefixed-p-textarea-wrapper i {
  font-style: normal !important;
}
prefixed-p-textarea-wrapper a:hover {
  color: #d5001c !important;
}
prefixed-p-textarea-wrapper a::-moz-focus-inner {
  border: 0 !important;
}
prefixed-p-textarea-wrapper a:focus {
  outline-color: currentColor !important;
}
prefixed-p-textarea-wrapper a:focus:not(:focus-visible) {
  outline-color: transparent !important;
}"
`;
